--- a/Data-Collectiom/data-scrapper.ipynb
+++ b/Data-Collectiom/data-scrapper.ipynb
@@ -14,25 +14,44 @@
     "from selenium.webdriver.chrome.options import Options\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "from functions import get_dataframes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You entered: 2023  Remember to select the seaosn and click update when the web page appears and pauses\n"
+     ]
+    }
+   ],
    "source": [
-    "#Empty lists to store FPL stats\n",
-    "player_name, Team, Pos, Pts = [], [], [], []\n",
-    "Gs, assists, cleansheets, bonus, bonus_point_sys, points_per_game = [], [], [], [], [], []\n",
-    "minutes_played, cost, team_selection, goals_conceeded, own_goals, penalties_saved = [], [], [], [], [], []\n",
-    "peanlties_missed, yellow_cards, red_cards, ICT = [], [], [], []"
+    "#State season to collect data from\n",
+    "\n",
+    "season = input(\"Enter start year of season to collect data from: \")\n",
+    "print(\"You entered:\", season, \" Remember to select the seaosn and click update when the web page appears and pauses\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Empty lists to store FPL stats\n",
+    "list_num = 20\n",
+    "list_of_lists =[[] for _ in range(list_num)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,26 +62,23 @@
     "url = 'https://www.fantasynutmeg.com/history'\n",
     "\n",
     "driver.get(url)\n",
-    "time.sleep(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Locating table of FPL stats\n",
-    "table_element = driver.find_element(By.XPATH, '/html/body/div[2]/div/div[2]/div/div[1]/div/div[2]/div[1]')\n",
-    "\n",
-    "time.sleep(5)\n",
-    "\n",
-    "driver.execute_script(\"arguments[0].scrollIntoView();\", table_element)\n"
+    "time.sleep(10) #Use pause to select season and click update, remember to set year variable first"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Locating table of FPL stats\n",
+    "table_element = driver.find_element(By.XPATH, '/html/body/div[2]/div/div[2]/div/div[1]/div/div[2]/div[1]')\n",
+    "driver.execute_script(\"arguments[0].scrollIntoView();\", table_element)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Scroll table until bottom is reached while retrieving html data into lists\n",
     "while current_scroll < table_height:\n",
     "    scroll_position = current_scroll\n",
     "    driver.execute_script(f\"arguments[0].scrollTop = {scroll_position};\", table_scroll)\n",
-    "    time.sleep(0.5)  # Adjust the sleep duration as needed\n",
     "\n",
     "    data_source = driver.page_source\n",
     "    soup = BeautifulSoup(data_source, \"html.parser\")\n",
@@ -115,115 +131,115 @@
     "        pm_element = player.find(\"div\", class_=\"ui-grid-cell ng-scope ui-grid-coluiGrid-0013\").text\n",
     "\n",
     "        #Append to lists\n",
-    "        player_name.append(name_element)\n",
-    "        Team.append(team_element)\n",
-    "        Pos.append(pos_element)\n",
-    "        Pts.append(pts_element)\n",
-    "        Gs.append(gs_element)\n",
-    "        assists.append(assist_element)\n",
-    "        cleansheets.append(cleansheet_element)\n",
-    "        bonus.append(bonus_element)\n",
-    "        bonus_point_sys.append(bonus_ps_element)\n",
-    "        points_per_game.append(ppg_element)\n",
-    "        minutes_played.append(mp_element)\n",
-    "        cost.append(cost_element)\n",
-    "        team_selection.append(selected_element)\n",
-    "        goals_conceeded.append(gc_element)\n",
-    "        own_goals.append(og_element)\n",
-    "        penalties_saved.append(ps_element)\n",
-    "        peanlties_missed.append(pm_element)\n",
+    "        list_of_lists[0].append(name_element)\n",
+    "        list_of_lists[1].append(team_element)\n",
+    "        list_of_lists[2].append(pos_element)\n",
+    "        list_of_lists[3].append(pts_element)\n",
+    "        list_of_lists[4].append(gs_element)\n",
+    "        list_of_lists[5].append(assist_element)\n",
+    "        list_of_lists[6].append(cleansheet_element)\n",
+    "        list_of_lists[7].append(bonus_element)\n",
+    "        list_of_lists[8].append(bonus_ps_element)\n",
+    "        list_of_lists[9].append(ppg_element)\n",
+    "        list_of_lists[10].append(mp_element)\n",
+    "        list_of_lists[11].append(cost_element)\n",
+    "        list_of_lists[12].append(selected_element)\n",
+    "        list_of_lists[13].append(gc_element)\n",
+    "        list_of_lists[14].append(og_element)\n",
+    "        list_of_lists[15].append(ps_element)\n",
+    "        list_of_lists[16].append(pm_element)\n",
     "    \n",
     "    for player in player_info2:\n",
-    "            player_element = player.find(\"div\", class_=\"ui-grid-cell-contents ng-binding ng-scope\")\n",
+    "            player_element = player.find(\"div\", class_=\"ui-grid-cell-contents ng-binding ng-scope\").text\n",
     "            if player_element:\n",
-    "                yellow_cards.append(player_element[0])\n",
-    "                red_cards.append(player_element[1])\n",
-    "                ICT.append(player_element[2])\n",
+    "                list_of_lists[17].append(player_element[0])\n",
+    "                list_of_lists[18].append(player_element[1])\n",
+    "                list_of_lists[20].append(player_element[2])\n",
     "\n",
-    "    current_scroll += 100\n",
+    "    current_scroll += 750\n",
     "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df1 = pd.DataFrame(player_name, columns=[\"Player Name\"])\n",
-    "df2 = pd.DataFrame(Team, columns=[\"Team\"])\n",
-    "df3 = pd.DataFrame(Pos, columns=[\"Position\"])\n",
-    "df4 = pd.DataFrame(Pts, columns=[\"Pts\"])\n",
-    "df5 = pd.DataFrame(Gs, columns=[\"GS\"])\n",
-    "df6 = pd.DataFrame(assists, columns=[\"A\"])\n",
-    "df7 = pd.DataFrame(cleansheets, columns=[\"CS\"])\n",
-    "df8 = pd.DataFrame(bonus, columns=[\"B\"])\n",
-    "df9 = pd.DataFrame(bonus_point_sys, columns=[\"BPS\"])\n",
-    "df10 = pd.DataFrame(points_per_game, columns=[\"PPG\"])\n",
-    "df11 = pd.DataFrame(minutes_played, columns=[\"MP\"])\n",
-    "df12 = pd.DataFrame(cost, columns=[\"Cost\"])\n",
-    "df13 = pd.DataFrame(team_selection, columns=[\"TSB\"])\n",
-    "df14 = pd.DataFrame(goals_conceeded, columns=[\"GC\"])\n",
-    "df15 = pd.DataFrame(own_goals, columns=[\"OG\"])\n",
-    "df16 = pd.DataFrame(penalties_saved, columns=[\"PS\"])\n",
-    "df17 = pd.DataFrame(peanlties_missed, columns=[\"PM\"])\n",
-    "df18 = pd.DataFrame(yellow_cards, columns=[\"YC\"])\n",
-    "df19 = pd.DataFrame(red_cards, columns=[\"RC\"])\n",
-    "df20 = pd.DataFrame(ICT, columns=[\"ICT\"])\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3860\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "final = df1.join(df2).join(df3).join(df4).join(df5).join(df6).join(df7).join(df8).join(df9).join(df10).join(df11).join(df12).join(df13).join(df14).join(df15).join(df16).join(df17).join(df18).join(df19).join(df20)\n",
-    "print(len(final))"
+    "df1 = pd.DataFrame(list_of_lists[0], columns=[\"Player Name\"])\n",
+    "df2 = pd.DataFrame(list_of_lists[1], columns=[\"Team\"])\n",
+    "df3 = pd.DataFrame(list_of_lists[2], columns=[\"Position\"])\n",
+    "df4 = pd.DataFrame(list_of_lists[3], columns=[\"Pts\"])\n",
+    "df5 = pd.DataFrame(list_of_lists[4], columns=[\"GS\"])\n",
+    "df6 = pd.DataFrame(list_of_lists[5], columns=[\"A\"])\n",
+    "df7 = pd.DataFrame(list_of_lists[6], columns=[\"CS\"])\n",
+    "df8 = pd.DataFrame(list_of_lists[7], columns=[\"B\"])\n",
+    "df9 = pd.DataFrame(list_of_lists[8], columns=[\"BPS\"])\n",
+    "df10 = pd.DataFrame(list_of_lists[9], columns=[\"PPG\"])\n",
+    "df11 = pd.DataFrame(list_of_lists[10], columns=[\"MP\"])\n",
+    "df12 = pd.DataFrame(list_of_lists[11], columns=[\"Cost\"])\n",
+    "df13 = pd.DataFrame(list_of_lists[12], columns=[\"TSB\"])\n",
+    "df14 = pd.DataFrame(list_of_lists[13], columns=[\"GC\"])\n",
+    "df15 = pd.DataFrame(list_of_lists[14], columns=[\"OG\"])\n",
+    "df16 = pd.DataFrame(list_of_lists[15], columns=[\"PS\"])\n",
+    "df17 = pd.DataFrame(list_of_lists[16], columns=[\"PM\"])\n",
+    "df18 = pd.DataFrame(list_of_lists[17], columns=[\"YC\"])\n",
+    "df19 = pd.DataFrame(list_of_lists[18], columns=[\"RC\"])\n",
+    "df20 = pd.DataFrame(list_of_lists[19], columns=[\"ICT\"])\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "519\n"
+     ]
+    }
+   ],
    "source": [
-    "final = final.drop_duplicates(subset=['Player Name', 'Team', 'Position', 'Cost'])"
+    "raw_data = df1.join(df2).join(df3).join(df4).join(df5).join(df6).join(df7).join(df8).join(df9).join(df10).join(df11).join(df12).join(df13).join(df14).join(df15).join(df16).join(df17).join(df18).join(df19).join(df20)\n",
+    "print(len(raw_data))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "758\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "final\n",
-    "print(len(final))"
+    "raw_data = raw_data.drop_duplicates(subset=['Player Name', 'Team', 'Position', 'Cost'])\n",
+    "raw_data['Season'] = season"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "519\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(raw_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "final.to_excel('2018 data.xlsx', index=False)"
+    "raw_data.to_csv(season + ' FPL data.csv', index=False)"
    ]
   }
  ],
