--- a/Data-Collectiom/data-scrapper.ipynb
+++ b/Data-Collectiom/data-scrapper.ipynb
@@ -14,8 +14,7 @@
     "from selenium.webdriver.chrome.options import Options\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "from bs4 import BeautifulSoup\n",
-    "from functions import get_dataframes"
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
@@ -94,7 +93,27 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\clifford.osei\\Documents\\Fantasy-Premier-League\\Data-Collectiom\\data-scrapper.ipynb Cell 7\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/clifford.osei/Documents/Fantasy-Premier-League/Data-Collectiom/data-scrapper.ipynb#W6sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m ppg_element \u001b[39m=\u001b[39m player\u001b[39m.\u001b[39mfind(\u001b[39m\"\u001b[39m\u001b[39mdiv\u001b[39m\u001b[39m\"\u001b[39m, class_\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mui-grid-cell ng-scope ui-grid-coluiGrid-000W\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mtext\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/clifford.osei/Documents/Fantasy-Premier-League/Data-Collectiom/data-scrapper.ipynb#W6sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m mp_element \u001b[39m=\u001b[39m player\u001b[39m.\u001b[39mfind(\u001b[39m\"\u001b[39m\u001b[39mdiv\u001b[39m\u001b[39m\"\u001b[39m, class_\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mui-grid-cell ng-scope ui-grid-coluiGrid-000X\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mtext\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/clifford.osei/Documents/Fantasy-Premier-League/Data-Collectiom/data-scrapper.ipynb#W6sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m cost_element \u001b[39m=\u001b[39m player\u001b[39m.\u001b[39;49mfind(\u001b[39m\"\u001b[39;49m\u001b[39mdiv\u001b[39;49m\u001b[39m\"\u001b[39;49m, class_\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mui-grid-cell ng-scope ui-grid-coluiGrid-000Y\u001b[39;49m\u001b[39m\"\u001b[39;49m)\u001b[39m.\u001b[39mtext\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/clifford.osei/Documents/Fantasy-Premier-League/Data-Collectiom/data-scrapper.ipynb#W6sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m selected_element \u001b[39m=\u001b[39m player\u001b[39m.\u001b[39mfind(\u001b[39m\"\u001b[39m\u001b[39mdiv\u001b[39m\u001b[39m\"\u001b[39m, class_\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mui-grid-cell ng-scope ui-grid-coluiGrid-000Z\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mtext\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/clifford.osei/Documents/Fantasy-Premier-League/Data-Collectiom/data-scrapper.ipynb#W6sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m gc_element \u001b[39m=\u001b[39m player\u001b[39m.\u001b[39mfind(\u001b[39m\"\u001b[39m\u001b[39mdiv\u001b[39m\u001b[39m\"\u001b[39m, class_\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mui-grid-cell ng-scope ui-grid-coluiGrid-0010\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mtext\n",
+      "File \u001b[1;32mc:\\Users\\clifford.osei\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\bs4\\element.py:2001\u001b[0m, in \u001b[0;36mTag.find\u001b[1;34m(self, name, attrs, recursive, string, **kwargs)\u001b[0m\n\u001b[0;32m   1984\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Look in the children of this PageElement and find the first\u001b[39;00m\n\u001b[0;32m   1985\u001b[0m \u001b[39mPageElement that matches the given criteria.\u001b[39;00m\n\u001b[0;32m   1986\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1998\u001b[0m \u001b[39m:rtype: bs4.element.Tag | bs4.element.NavigableString\u001b[39;00m\n\u001b[0;32m   1999\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   2000\u001b[0m r \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m-> 2001\u001b[0m l \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfind_all(name, attrs, recursive, string, \u001b[39m1\u001b[39;49m, _stacklevel\u001b[39m=\u001b[39;49m\u001b[39m3\u001b[39;49m,\n\u001b[0;32m   2002\u001b[0m                   \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[0;32m   2003\u001b[0m \u001b[39mif\u001b[39;00m l:\n\u001b[0;32m   2004\u001b[0m     r \u001b[39m=\u001b[39m l[\u001b[39m0\u001b[39m]\n",
+      "File \u001b[1;32mc:\\Users\\clifford.osei\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\bs4\\element.py:2030\u001b[0m, in \u001b[0;36mTag.find_all\u001b[1;34m(self, name, attrs, recursive, string, limit, **kwargs)\u001b[0m\n\u001b[0;32m   2028\u001b[0m     generator \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mchildren\n\u001b[0;32m   2029\u001b[0m _stacklevel \u001b[39m=\u001b[39m kwargs\u001b[39m.\u001b[39mpop(\u001b[39m'\u001b[39m\u001b[39m_stacklevel\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m2\u001b[39m)\n\u001b[1;32m-> 2030\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_find_all(name, attrs, string, limit, generator,\n\u001b[0;32m   2031\u001b[0m                       _stacklevel\u001b[39m=\u001b[39;49m_stacklevel\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[1;32mc:\\Users\\clifford.osei\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\bs4\\element.py:841\u001b[0m, in \u001b[0;36mPageElement._find_all\u001b[1;34m(self, name, attrs, string, limit, generator, **kwargs)\u001b[0m\n\u001b[0;32m    839\u001b[0m     \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m    840\u001b[0m \u001b[39mif\u001b[39;00m i:\n\u001b[1;32m--> 841\u001b[0m     found \u001b[39m=\u001b[39m strainer\u001b[39m.\u001b[39;49msearch(i)\n\u001b[0;32m    842\u001b[0m     \u001b[39mif\u001b[39;00m found:\n\u001b[0;32m    843\u001b[0m         results\u001b[39m.\u001b[39mappend(found)\n",
+      "File \u001b[1;32mc:\\Users\\clifford.osei\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\bs4\\element.py:2320\u001b[0m, in \u001b[0;36mSoupStrainer.search\u001b[1;34m(self, markup)\u001b[0m\n\u001b[0;32m   2318\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(markup, Tag):\n\u001b[0;32m   2319\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstring \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mattrs:\n\u001b[1;32m-> 2320\u001b[0m         found \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msearch_tag(markup)\n\u001b[0;32m   2321\u001b[0m \u001b[39m# If it's text, make sure the text matches.\u001b[39;00m\n\u001b[0;32m   2322\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(markup, NavigableString) \u001b[39mor\u001b[39;00m \\\n\u001b[0;32m   2323\u001b[0m          \u001b[39misinstance\u001b[39m(markup, \u001b[39mstr\u001b[39m):\n",
+      "File \u001b[1;32mc:\\Users\\clifford.osei\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\bs4\\element.py:2283\u001b[0m, in \u001b[0;36mSoupStrainer.search_tag\u001b[1;34m(self, markup_name, markup_attrs)\u001b[0m\n\u001b[0;32m   2281\u001b[0m             markup_attr_map[k] \u001b[39m=\u001b[39m v\n\u001b[0;32m   2282\u001b[0m attr_value \u001b[39m=\u001b[39m markup_attr_map\u001b[39m.\u001b[39mget(attr)\n\u001b[1;32m-> 2283\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_matches(attr_value, match_against):\n\u001b[0;32m   2284\u001b[0m     match \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[0;32m   2285\u001b[0m     \u001b[39mbreak\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\clifford.osei\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\bs4\\element.py:2338\u001b[0m, in \u001b[0;36mSoupStrainer._matches\u001b[1;34m(self, markup, match_against, already_tried)\u001b[0m\n\u001b[0;32m   2334\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(markup, \u001b[39mlist\u001b[39m) \u001b[39mor\u001b[39;00m \u001b[39misinstance\u001b[39m(markup, \u001b[39mtuple\u001b[39m):\n\u001b[0;32m   2335\u001b[0m     \u001b[39m# This should only happen when searching a multi-valued attribute\u001b[39;00m\n\u001b[0;32m   2336\u001b[0m     \u001b[39m# like 'class'.\u001b[39;00m\n\u001b[0;32m   2337\u001b[0m     \u001b[39mfor\u001b[39;00m item \u001b[39min\u001b[39;00m markup:\n\u001b[1;32m-> 2338\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_matches(item, match_against):\n\u001b[0;32m   2339\u001b[0m             \u001b[39mreturn\u001b[39;00m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m   2340\u001b[0m     \u001b[39m# We didn't match any particular value of the multivalue\u001b[39;00m\n\u001b[0;32m   2341\u001b[0m     \u001b[39m# attribute, but maybe we match the attribute value when\u001b[39;00m\n\u001b[0;32m   2342\u001b[0m     \u001b[39m# considered as a string.\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\clifford.osei\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\bs4\\element.py:2351\u001b[0m, in \u001b[0;36mSoupStrainer._matches\u001b[1;34m(self, markup, match_against, already_tried)\u001b[0m\n\u001b[0;32m   2347\u001b[0m \u001b[39mif\u001b[39;00m match_against \u001b[39mis\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m   2348\u001b[0m     \u001b[39m# True matches any non-None value.\u001b[39;00m\n\u001b[0;32m   2349\u001b[0m     \u001b[39mreturn\u001b[39;00m markup \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m-> 2351\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(match_against, Callable):\n\u001b[0;32m   2352\u001b[0m     \u001b[39mreturn\u001b[39;00m match_against(markup)\n\u001b[0;32m   2354\u001b[0m \u001b[39m# Custom callables take the tag as an argument, but all\u001b[39;00m\n\u001b[0;32m   2355\u001b[0m \u001b[39m# other ways of matching match the tag name as a string.\u001b[39;00m\n",
+      "File \u001b[1;32m<frozen abc>:117\u001b[0m, in \u001b[0;36m__instancecheck__\u001b[1;34m(cls, instance)\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "#Scroll table until bottom is reached while retrieving html data into lists\n",
     "while current_scroll < table_height:\n",
@@ -162,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,17 +209,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "519\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "raw_data = df1.join(df2).join(df3).join(df4).join(df5).join(df6).join(df7).join(df8).join(df9).join(df10).join(df11).join(df12).join(df13).join(df14).join(df15).join(df16).join(df17).join(df18).join(df19).join(df20)\n",
     "print(len(raw_data))"
@@ -208,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,24 +229,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "519\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(raw_data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
