--- a/Data-Collection/training_data.ipynb
+++ b/Data-Collection/training_data.ipynb
@@ -12,11 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets = 'Fantasy-Premier-League/Data-Collection/Datasets'\n",
+    "#Get current working directory\n",
+    "datasets = os.getcwd()\n",
     "historical_data = pd.DataFrame()"
    ]
   },
