--- a/Data-Collection/historical_data.ipynb
+++ b/Data-Collection/historical_data.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This Notebook takes the individual datasets per season, excluding the current season and joines the into a single dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,12 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Get current working directory\n",
-    "datasets = os.getcwd()\n",
+    "datasets = 'Datasets/Training_data/'\n",
+    "\n",
+    "#Initialise empty df to store combined datasets\n",
     "historical_data = pd.DataFrame()"
    ]
   },
@@ -25,19 +34,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] The system cannot find the path specified: 'Data-Collection/Datasets'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Iterate through each file in the directory\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m filename \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdatasets\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.csv\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m      4\u001b[0m         file_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(datasets, filename)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: 'Data-Collection/Datasets'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Iterate through each file in the directory\n",
     "for filename in os.listdir(datasets):\n",
@@ -53,15 +50,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Player Name Team Position  Pts  GS   A  CS   B  BPS  PPG    MP   Cost  \\\n",
+      "0     Sánchez  ARS      MID  264  24  11  13  32  834  6.9  3217  £11.7   \n",
+      "1        Alli  TOT      MID  225  18  11  17  17  679  6.1  3036   £9.1   \n",
+      "2      Hazard  CHE      MID  224  16   9  17  33  869  6.2  2985  £10.5   \n",
+      "3        Kane  TOT      FWD  224  29   7  14  33  920  7.5  2523  £11.9   \n",
+      "4      Lukaku  EVE      FWD  221  25   6  13  33  824  6.0  3266  £10.1   \n",
+      "\n",
+      "     TSB  GC  OG  PS  PM  Season  \n",
+      "0  29.7%  41   0   0   1    2016  \n",
+      "1  32.3%  22   0   0   0    2016  \n",
+      "2  30.6%  29   0   0   1    2016  \n",
+      "3  23.3%  19   0   0   1    2016  \n",
+      "4  32.2%  42   0   0   0    2016  \n"
+     ]
+    }
+   ],
    "source": [
     "# Display the combined data\n",
     "print(historical_data.head())\n",
     "\n",
-    "# Save the combined data to a new CSV file if needed\n",
-    "historical_data.to_csv('combined_data.csv', index=False)"
+    "# Save the combined data to a new CSV file\n",
+    "historical_data.to_csv('Datasets/Training_data/historical_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3936"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(historical_data)"
    ]
   }
  ],
