--- a/Data-Collection/raw_data.ipynb
+++ b/Data-Collection/raw_data.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "#Get current working directory\n",
-    "datasets = 'Datasets/Training_data/'\n",
+    "datasets = 'Datasets/'\n",
     "\n",
     "#Initialise empty df to store combined datasets\n",
     "historical_data = pd.DataFrame()"
@@ -78,7 +78,7 @@
     "print(historical_data.head())\n",
     "\n",
     "# Save the combined data to a new CSV file\n",
-    "historical_data.to_csv('Datasets/Training_data/historical_data.csv', index=False)"
+    "historical_data.to_csv('Datasets/raw_data_combined.csv', index=False)"
    ]
   },
   {
@@ -89,7 +89,7 @@
     {
      "data": {
       "text/plain": [
-       "3936"
+       "4455"
       ]
      },
      "execution_count": 5,
