--- a/Data Modelling/EDA.ipynb
+++ b/Data Modelling/EDA.ipynb
@@ -741,13 +741,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Summary stats for numerical variables"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -784,6 +777,23 @@
    "source": [
     "#Checking if data has null values\n",
     "historical_data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the pre-processed data to a new CSV file\n",
+    "# historical_data.to_csv('timeseries_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Summary stats for numerical variables"
    ]
   },
   {
@@ -913,16 +923,6 @@
     "plt.xlabel('Season')\n",
     "plt.ylabel('Max Total Points')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save the pre-processed data to a new CSV file\n",
-    "historical_data.to_csv('timeseries_data.csv', index=False)"
    ]
   }
  ],
