--- a/Data Modelling/Prediction_analysis.ipynb
+++ b/Data Modelling/Prediction_analysis.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score"
@@ -19,7 +18,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('timeseries_data.csv')"
+    "timeseries_data = pd.read_csv('timeseries_data.csv')\n",
+    "\n",
+    "df = timeseries_data.copy()"
    ]
   },
   {
